tests/build/cases/ui_node/incorrect_assign_token.stderr
error: expected `delegate = <expr>`
 --> cases/ui_node/incorrect_assign_token.rs:8:5
  |
8 |     delegate: &self.0,
  |     ^^^^^^^^

warning: unused import: `UiNode`
 --> cases/ui_node/incorrect_assign_token.rs:3:34
  |
3 |     widget_instance::{NilUiNode, UiNode},
  |                                  ^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
